# pudl-examples

./: .env  .gitignore  .pre-commit-config.yaml  .pudl.yml  03-eia930-sanity-checks.ipynb  03-pudl-imputed-demand.ipynb  04-renewable-generation-profiles.ipynb  05-ferc714-electricity-demand-forecast-biases  05-ferc714-electricity-demand-forecast-biases.ipynb  07-ferceqr-access.ipynb  07-sec10k-use-cases.ipynb  AGENTS.md  README.md  d1-dossier-plant.py  docker-compose.yml  docker-run.sh  environment.yml  pixi.toml  pyproject.toml  utility-explorer.py
.github/workflows/: bot-auto-merge.yml  deploy-marimo-pages.yml  integration-test-notebooks.yml  integration-tests.yml  repo2docker.yaml  sync-kaggle-deps.yml  update-lockfiles.yml
__marimo__/session/: utility-explorer.py.json
docs/: .marimo.toml
marimo/: plant-explorer.py  sec10k-data-review.py
notebooks/: .gitignore  01-pudl-data-access.ipynb  01-pudl-database.ipynb  02-pudl-outputs.ipynb  03-pudl-parquet.ipynb
notebooks/tutorials/: 01-accessing-pudl-db.ipynb  01-pudl-database.ipynb  02-pudl-outputs.ipynb  02-using-pudl-outputs.ipynb  03-pudl-parquet.ipynb
scripts/: export_marimo_notebooks.py  sync_kaggle_deps.py
tests/playwright/: conftest.py  test_plant_explorer.py
wasm/: ruff.toml
wasm/marimo/: plant-explorer.py  utility-explorer.py
wasm/marimo/__marimo__/session/: plant-explorer.py.json  utility-explorer.py.json
