[project]
authors = [{ name = "Zane Selvans", email = "zane.selvans@catalyst.coop" }]
dependencies = ["marimo>=0.15.2,<0.16"]
name = "pudl-examples"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
pudl_examples = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.3.2,<3"
polars = ">=1.32.3,<2"
pre-commit = ">=4.3.0,<5"
ruff = ">=0.12.11,<0.13"
geopandas = ">=1.1.1,<2"
matplotlib = ">=3.10.5,<4"
matplotx = ">=0.3.10,<0.4"
universal_pathlib = ">=0.2.6,<0.3"
s3fs = ">=2025.7.0,<2026"
python-lsp-server = ">=1.13.1,<2"
duckdb = ">=1.3.2,<2"
sqlglot = ">=27.8.0,<28"
